grammar fixes, spacing betwween each field with a <br/> tag

--- a/src/components/SettingsModal/SettingsModal.css
+++ b/src/components/SettingsModal/SettingsModal.css
@@ -1,22 +1,21 @@
-.settings-modal{
+.settings-modal {
     border: 3px solid orange;
-    position:absolute;
-    width:25%;
-    top: 40%;
-    left: 40%;
+    position: absolute;
+    width: 30%;
+    top: 30%;
+    left: 35%;
     bottom: 40%;
-    right: 40%;
+    right: 35%;
     /* text-align: center; */
     /* display: inline-block; */
-display: flex;
-flex-direction: column;
-justify-items: center;
-align-items: center;
-z-index: 9999;
-background-color: beige;
-
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: beige;
 }
-.input-row{
+.input-row {
     display: block;
 }
 #tile-zoom {
